# cha-MD-ba

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  analyze_coordinates.py  center_protein_in_box.py  centrar_prot.sh  em.mdp  extend_carpeta_cola_proc_ns.sh  generate_grant_pdf.py  minimiza_atomico.sh  predict_sequence.py  project_config.md  requirements.txt  run_minimize.py  run_minimize_fixed.py  run_nvt.py  run_nvt_direct.py  setup.py  test_esmfold_install.py  test_protein_predictor.py  test_structure_viewer.py
.github/: dependabot.yml
api/: api.rst  visualization.rst
atomic/: analisis.sh  em.mdp  kk.sh  npt.sh  plot_several.sh
bash_version/: README.md  analisis.sh  centrar.sh  ext_carpeta_cola_proc_cg.sh  minimiza.sh  minimiza_atomico.sh  nvt2.sh  plot_several.sh
cha_md_ba/: __init__.py  analysis.py  minimize.py  nvt.py  prepare.py  preprocess.py  protein_predictor.py
docking_pipeline/: run_pipeline.py
docs/: INTEGRATION_GUIDE.md  api.md  api_reference.rst  conf.py  examples.md  faq.md  index.rst  user_guide.md  (+1 more)
python_version/: .isort.cfg  README.md  codecov.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_alphafold_install.py  test_esmfold_install.py
python_version/cha_md_ba/: __init__.py  alphafold.py  cli.py  npt.py  nvt.py
python_version/docs/: conf.py  contributing.rst  examples.rst  faq.rst  index.rst  installation.rst  user_guide.rst
python_version/docs/api/: analysis.rst  utils.rst
python_version/tests/: test_alphafold.py  test_protein_predictor.py  test_system_preparation.py
(+78 files in other folders)
